# code-practice

./: .gitignore  CLAUDE.md  DISTRIBUTION.md  GUI_GUIDE.md  IMPROVEMENTS_SUMMARY.md  LEARNING_GUIDE.md  README.md  SECURITY.md  WEB_INTERFACE_OPTIONS.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
src/research_bot/: __init__.py  config.py  gui.py  main.py  web_streamlit.py
src/research_bot/agents/: __init__.py  research_agent.py
src/research_bot/exporters/: __init__.py  base.py  csv_exporter.py  html_exporter.py  json_exporter.py  markdown_exporter.py
src/research_bot/extractors/: __init__.py  data_extractor.py
src/research_bot/tools/: __init__.py  base.py  content_fetcher.py  web_search.py
tests/: __init__.py  test_config.py  test_tools.py
